@startuml
class FleeingBehavior {
    + FleeingBehavior(worldService:IWorldService)
    + Name : string <<get>>
    + Priority : int <<get>>
    + CanExecute(animal:Animal) : bool
    + Execute(animal:Animal) : void
}
class "IBehavior`1"<T> {
}
"IBehavior`1" "<Animal>" <|-- FleeingBehavior
FleeingBehavior --> "_worldService" IWorldService
@enduml
